frontend/src/app/modules/shared/components/table/table.component.scss
/********************************************************************************
 * Copyright (c) 2022, 2023 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
 * Copyright (c) 2022, 2023 ZF Friedrichshafen AG
 * Copyright (c) 2022, 2023 Contributors to the Eclipse Foundation
 *
 * See the NOTICE file(s) distributed with this work for additional
 * information regarding copyright ownership.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Apache License, Version 2.0 which is available at
 * https://www.apache.org/licenses/LICENSE-2.0.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations
 * under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 ********************************************************************************/

@import '../../../../../theme/base.scss';
@tailwind base;

table {
  @extend .body-small;
  color: '#000000';
  width: 100%;
}

.table-wrapper {
  scrollbar-width: thin;
  overflow-x: scroll;
}

.settings-icon {
  margin-left: 50px;
  margin-right: 25px;
}

.table--select-all {
  display: inline-flex;
  align-items: center;

  &__menu {
    background: rgba(0, 0, 0, 0.04);

    &>.table--select-all__dropdown:hover {
      background: none;
    }
  }
}

.table--select-all__dropdown {
  margin-left: -5px;

  &:hover {
    background: rgba(0, 0, 0, 0.04);
    cursor: pointer;
  }
}

.mat-mdc-row .mat-mdc-cell {
  cursor: pointer;
}

.mat-mdc-row:hover {
  @apply bg-surfaceMedium !important;
}

.table--no-data {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 250px;
  justify-content: center;

  &__icon {
    transform: scale(2);
  }
}

.no-hover .mat-mdc-cell {
  cursor: default;
}

.no-hover:hover {
  outline: unset;
}

.table--header {
  border-bottom: 1px solid #d2d2d2 !important;
}

.table--cell {
  padding: 2px 12px 2px 12px;
  border: none !important;
  max-width: 332px;
}

.table--header--cell {
  display: flex;
  justify-content: space-between;
  width: 100%;

  &--content {
    display: flex;
    flex-direction: row;
    align-items: center;

    &--sort {
      width: 24px;
      height: 24px;

      &--asc {
        width: 10px;
        transform: rotate(180deg);
        margin: 9.5px 7px;
      }

      &--dsc {
        width: 10px;
        margin: 9.5px 7px;
      }
    }
  }
}

.table--header--cell--filter {
  width: 24px;
  display: flex;
  justify-content: center;
  align-content: center;

  &--icon {
    width: 12px;
  }
}

.menu-input-field {
  border-radius: 10px;
  box-shadow: 0px 15px 25px 0px #3333330d, -10px -10px 15px 0px #ffffff1a, 0px 0px 25px 0px #33333308;
}

.menu-input-field .mat-mdc-menu-content {
  padding: 0;
}

.mdc-menu-surface {
  border-radius: 10px !important;
}

.mat-mdc-table .mdc-data-table__row {
  height: 40px;
}

.table--selected__container {
  position: sticky;
  top: 0;
  z-index: 1;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 10px;
  // Mat row defines fixed height of 48px.
  min-height: 48px;

  @apply bg-primaryLight border-r-2;
}

.loading-table {
  background-image: linear-gradient(to right, transparent 50%, rgba(0, 0, 0, 0.05) 50%);
  background-size: 200% 100%;
  animation: loading 2s cubic-bezier(0.4, 0, 0.2, 1) infinite;
}

.loading {
  background: none;

  td {
    opacity: 0.45;
    pointer-events: none;
    background: none;
  }
}

@keyframes loading {
  0% {
    background-position: 0;
  }

  50% {
    background-position: -30%;
  }

  80% {
    background-position: -100%;
  }

  100% {
    background-position: -200%;
  }
}


.table--menu {
  &__mobile {
    display: none;
  }

  @media (max-width: 768px) {
    &__desktop {
      display: none;
    }

    &__mobile {
      display: table-row;
    }
  }
}

.expand-row {
  height: 0;
}

.expand-element {
  overflow: hidden;
  display: flex;
  transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1);
}

.expanded {
  height: 48px;
}

.collapsed {
  height: 0;
  min-height: 0;
}

.table-paginator-menu {
  position: sticky;
  bottom: 0;
  z-index: 1;
}

.table--header--row {
  white-space: nowrap;
  @apply font-semiBold;
  @apply text-black;
  font-size: 16px;
}

.table--header--row .mat-sort-header-content {
  width: 100%;
}

.table--header--row .mat-sort-header-arrow {
  display: none;
}

.table--header {
  padding-bottom: 8px;
}

.tableScroll {
  height: 547px !important;
  overflow: auto !important;
}

.table--header--sort--indicator {
  margin-left: 5px;
}

.table--header--tooltip {
  .mdc-tooltip__surface {
    background-color: rgb(48, 48, 48);
    @apply font-medium;
    color: white;
    max-width: 300px;
    padding: 15px;
    font-size: 14px;
    line-height: 20px;
  }

  .mdc-tooltip--multiline {
    white-space: pre-line;
  }
}

.table--header--row .mdc-data-table__header-cell {
  padding: 0 12px 0 12px !important;
}

.table--body--row .mdc-data-table__cell {
  padding: 0 12px 0 12px !important;
  border-bottom-style: none !important;
}

